k8s/traefik/traefik-deployment.yaml
# Traefik with CRD+file+ingress providers
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: foobar-namespace
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      # ensuring certs exist before the engine starts
      containers:
      - name: traefik
        image: traefik:v3.0
        args:
          - "--providers.kubernetesingress"
          # point to the directory and enable watch for hot-reloads
          - "--providers.kubernetescrd"
          - "--providers.file.directory=/config"
          - "--providers.file.watch=true"
          - "--entrypoints.web.address=:80"
          - "--entrypoints.websecure.address=:443"
          - "--api.insecure=true"
          - "--log.level=DEBUG"
        ports:
          - name: web
            containerPort: 80
          - name: websecure
            containerPort: 443
          - name: admin
            containerPort: 8080
        volumeMounts:
          # mount the certificates from the PVC
          - name: certs-volume
            mountPath: /certs
            readOnly: true
          # mount the dynamic configuration from the ConfigMap
          - name: config-volume
            mountPath: /config
      volumes:
        - name: certs-volume
          persistentVolumeClaim:
            claimName: traefik-certs-pvc
        - name: config-volume
          configMap:
            name: traefik-dynamic-config
