k8s/traefik/traefik-service.yaml
# LoadBalancer on :80 and :443
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: foobar-namespace
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: websecure
      port: 443
      targetPort: 443
